Bug 1395670 - In webrender layers-free mode, don't add a root scroll metadata if we already have it elsewhere in the tree. r=mstange

MozReview-Commit-ID: B9LY4v9t11Y